# rusty-cycles

./: .gitignore  Cargo.toml  LICENSE  README.md  music.seq
docs/: phase0.md
examples/: feature-tour.seq  showcase.seq  test.seq  test2.seq  test_include_part.seq
src/: audio.rs  banks.rs  dsl.rs  event_spec.rs  lib.rs  main.rs  pat.rs
tests/: phase0_golden.rs
tests/fixtures/: phase0_inline.seq
