[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"
description = "Live-coding cycle sequencer MVP (watch file, reload on cycle, WAV triggers)"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
hound = "3.5"
notify-debouncer-mini = "0.6"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
